--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="test/index.js"></script>
+  <script src="index.js"></script>
   <title>Document</title>
 </head>
 <body>
-  
+  <h1>This is my first JavaScript code </h1>
+  <p>Hello, World!</p>
 </body>
 </html>
